# haskell-sandbox

haskellbook-hangman/: hangman.cabal
haskellbook-hangman/src/: Main.hs
haskellbook-hello/: hello.cabal
haskellbook-hello/src/: DogsRule.hs  Hello.hs  Main.hs
haskellbook/applicative-ch17.hb/: ApplicativeInUse.hs  ApplicativeLaws.hs  Applicatives.hs  BadMonoid.hs  Combinations.hs  ConstantApplicative.hs  CowApplicative.hs  EitherVsValidation.hs  ExercisesLookups.hs  FixerUpper.hs  FunctorVsApplicative.hs  Identity.hs  ListApplicative.hs  MaybeApplicative.hs  QuickBatch.hs  SpecializeTypes.hs  ZipListApplicative.hs  ZipListMonoid.hs  applicative-ch17.cabal
haskellbook/ch15-exercises.hb/: MonoidBoolConj.hs  MonoidBoolDisj.hs  MonoidCombineCheck.hs  MonoidCombineHspec.hs  MonoidCompCheck.hs  MonoidCompHspec.hs  MonoidIdentity.hs  MonoidMem.hs  MonoidTrivial.hs  MonoidTwo.hs  SemiGroupTrivial.hs  SemigroupBoolConj.hs  SemigroupBoolDisj.hs  SemigroupCombine.hs  SemigroupCombineCheck.hs  SemigroupCombineHspec.hs  SemigroupComp.hs  SemigroupCompCheck.hs  SemigroupCompHspec.hs  SemigroupFour.hs  SemigroupIdentity.hs  SemigroupOr.hs  SemigroupThree.hs  SemigroupTwo.hs  SemigroupValidation.hs  ch15-exercises.cabal
haskellbook/composing-ch25.hb/: Bifunctor.hs  Composing.hs  IdentityIsBoring.hs  MonadTransformerStepByStep.hs  MonadTransformers.hs
haskellbook/foldable-ch20.hb/: FoldableDerivedOperations.hs  FoldableExercises.hs  FoldableInstances.hs  FoldableLibraryFunctions.hs  RevengeOfMonoids.hs
haskellbook/functor-ch16.hb/: ApplicationsInUse.hs  ApplicativesAsMonoidalFunctors.hs  ChapterExercisesFunctor.hs  FlipFunctor.hs  FmapEither.hs  FmapMaybe.hs  FunctorConstant.hs  FunctorIO.hs  FunctorInstances.hs  FunctorKindedness.hs  FunctorKindness.hs  FunctorLaws.hs  FunctorQuickCheck.hs  FunctorWrappedFunction.hs  Functors.hs  HeavyLifting.hs  NaturalTransformations.hs  ReplaceExperiment.hs  UnappliedTypes.hs  functor-ch16.cabal
haskellbook/gone-wild-ch19.hb/: ApplicativesForUtilities.hs  LiftingOverIO.hs  Maps.hs  MonoidsGoneWild.hs
haskellbook/laws-check-ch15.hb/: ExerciseMonoid.hs  InvalidMonoid.hs  LawsCheck.hs  laws-check.cabal
haskellbook/monad-ch18.hb/: BadMonad.hs  DoSyntax.hs  EitherMonad.hs  ExamplesOfMonad.hs  FixingBadMonad.hs  KleisliComposition.hs  MonadExamples.hs  MonadInstances.hs  SumMonad.hs  WhatIsMonad.hs  monad-ch18.cabal
haskellbook/monoid-ch15.hb/: Associativity.hs  Commutativity.hs  Identity.hs  Madness.hs  MonoidLaws.hs  Monoids.hs
haskellbook/morse-ch14.hb/: morse.cabal  stack.yaml
haskellbook/optional-ch15.hb/: optional.cabal
haskellbook/orphans-ch15.hb/: Listy.hs  ListyInstances.hs
haskellbook/parse-ch24.hb/: ActivityLogParsing.hs  AesonMarshalling.hs  AltParsing.hs  BackTracking.hs  CharTokenParsing.hs  IniParsing.hs  IpV4Address.hs  IpV6Address.hs  LearnParsers.hs  Main.hs  NumberOfString.hs  ParsingFractions.hs  ParsingFreeJazz.hs  PhoneNumberParsing.hs  PolymorphicParsing.hs  PositiveIntParsing.hs  SemVerParsing.hs  UnitOfSuccess.hs  parse-ch24.cabal
haskellbook/reader-ch22.hb/: ApplicativeOfFunctions.hs  ApplicativeOfFunctionsExercises.hs  AskReader.hs  ExampleReaderT.hs  FunctionsWaitingForInput.hs  FunctionsWaitingForInputExercise.hs  FunctorOfFunctions.hs  Main.hs  (+5 more)
sandbox-stack/: sandbox-stack.cabal
sandbox.hsproj/: HSsandbox.hs  Sanbox.cabal  Sandbox.cabal
sandbox.hsproj/HaskellBook/Chapter03/: _Exercises.hsplay  _Strings.hsplay
sandbox.hsproj/HaskellBook/Chapter04/: BasicTypes.hs
sandbox.hsproj/HaskellBook/Chapter06/: _Exercises.hsplay  _Typeclasses.hsplay
sandbox.hsproj/HaskellBook/Chapter08/: Exercises.hs  Recursion.hs  _DividedBy.hsplay  _McCarthy91.hsplay  _NumbersToWords.hsplay
sandbox.hsproj/HaskellBook/Chapter09/: Lists.hs  Zipping.hs  _Lists.hsplay  _NonStrict.hsplay  _Transform.hsplay
sandbox.hsproj/HaskellBook/Chapter10/: _FoldExercises.hsplay
sandbox.hsproj/HaskellBook/Chapter11/: ExercisePhone.hs  ExercisesLogicGoats_1_2.hs  _AlgebraicDataTypes.hsplay  _ConstructingValues.hsplay  _ExercisePhone.hsplay  _VigenereCipher.hsplay
sandbox.hsproj/HaskellBook/Chapter12/: SignallingAdversity.hs
sandbox.hsproj/HaskellBook/Chapter13/: Caesar.hs  Vigenere.hs
school-stack/: school-stack.cabal
school.hsproj/: HSschool.hs  school.cabal
school.hsproj/HaskellBook/Chapter02/: Exercises.hs  Hello.hs  _Exercises.hsplay  _Hello.hsplay
school.hsproj/HaskellBook/Chapter03/: Exercises.hs  Strings.hs  _Exercises.hsplay  _Strings.hsplay
school.hsproj/HaskellBook/Chapter04/: Exercises.hs  _BasicTypes.hsplay
school.hsproj/HaskellBook/Chapter05/: Exercises.hs  Types.hs  _Exercises.hsplay  _Types.hsplay
school.hsproj/HaskellBook/Chapter06/: Exercises.hs  Typeclasses.hs
school.hsproj/HaskellBook/Chapter07/: Exercises.hs  FuncPatterns.hs  _Exercises.hsplay  _FuncPatterns.hsplay  _Intermission.hsplay
school.hsproj/HaskellBook/Chapter08/: DividedBy.hs  McCarthy91.hs  _Recursion.hsplay
school.hsproj/HaskellBook/Chapter09/: Cipher.hs  EnumFromTo.hs  Exercises.hs  Filtering.hs  MyStdFuns.hs  NonStrict.hs  PoemLines.hs  _CaesarCipher.hsplay  _EnumFromTo.hsplay  _Exercises.hsplay  _Filtering.hsplay  _PoemLines.hsplay
school.hsproj/HaskellBook/Chapter10/: Exercises.hs  FoldLeft.hs  Scans.hs  Unconditional.hs  WriteFolds.hs  _FoldLeft.hsplay  _Scans.hsplay  _Unconditional.hsplay
school.hsproj/HaskellBook/Chapter11/: AlgebraicDataTypes.hs  ConstructingValues.hs  DataConstructors.hs  DataVsType.hs  DeconstructingValues.hs  Exercises.hs  ExercisesJammin.hs  ExercisesLogicGoats_3.hs  ExercisesPityTheBool.hs  FunctionAsExponential.hs  Kinds.hs  NormalForm.hs  ProductTypes.hs  VigenereCipher.hs  WithNewtypeDeriving.hs  WithoutNewtypeDeriving.hs  _DeconstructingValues.hsplay  _ExerciseHuttonsRazor.hsplay  _Exercises.hsplay  _ExercisesLogicGoats_1_2.hsplay  _ExercisesLogicGoats_3.hsplay  _ExercisesPityTheBool.hsplay  _Kinds.hsplay  _ProductTypes.hsplay  _WithNewtypeDeriving.hsplay  _WithoutNewtypeDeriving.hsplay
school.hsproj/HaskellBook/Chapter12/: Exercises.hs  _Exercises.hsplay  _SignallingAdversity.hsplay
(+84 files in other folders)
