name: Sandbox
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable sandbox
  main-is: HSsandbox.hs
  buildable: True
  build-depends:
      base -any,
      time -any
  other-modules:
      HaskellBook.Chapter12.Exercises
      HaskellBook.Chapter12.SignallingAdversity
      HaskellBook.Chapter03.Exercises
      HaskellBook.Chapter03.Strings
      HaskellBook.Chapter06.Typeclasses
      HaskellBook.Chapter06.Exercises
      HaskellBook.Chapter06.TypeKwonDo
      HaskellBook.Chapter07.Intermission
      HaskellBook.Chapter07.Exercises
      HaskellBook.Chapter07.FuncPatterns
      HaskellBook.Chapter04.BasicTypes
      HaskellBook.Chapter04.Exercises
      HaskellBook.Chapter05.Types
      HaskellBook.Chapter05.Exercises
      HaskellBook.Chapter05.TypeKwonDo
      HaskellBook.Chapter09.EnumFromTo
      HaskellBook.Chapter09.PoemLines
      HaskellBook.Chapter09.Zipping
      HaskellBook.Chapter09.MyStdFuns
      HaskellBook.Chapter09.CaesarCipher
      HaskellBook.Chapter09.Lists
      HaskellBook.Chapter09.NonStrict
      HaskellBook.Chapter09.Filtering
      HaskellBook.Chapter09.Transform
      HaskellBook.Chapter09.Exercises
      HaskellBook.Chapter10.WriteFolds
      HaskellBook.Chapter10.Scans
      HaskellBook.Chapter10.FoldLeft
      HaskellBook.Chapter10.Unconditional
      HaskellBook.Chapter10.FoldRight
      HaskellBook.Chapter10.FoldExercises
      HaskellBook.Chapter10.Exercises
      HaskellBook.Chapter08.Recursion
      HaskellBook.Chapter08.DividedBy
      HaskellBook.Chapter08.NumbersToWords
      HaskellBook.Chapter08.Exercises
      HaskellBook.Chapter08.McCarthy91
      HaskellBook.Chapter02.Exercises
      HaskellBook.Chapter02.Hello
      HaskellBook.Chapter11.NormalForm
      HaskellBook.Chapter11.WithoutNewtypeDeriving
      HaskellBook.Chapter11.FunctionAsExponential
      HaskellBook.Chapter11.DataVsType
      HaskellBook.Chapter11.ExercisesJammin
      HaskellBook.Chapter11.WithNewtypeDeriving
      HaskellBook.Chapter11.ExercisesLogicGoats_1_2
      HaskellBook.Chapter11.Kinds
      HaskellBook.Chapter11.ExercisesPityTheBool
      HaskellBook.Chapter11.DataConstructors
      HaskellBook.Chapter11.DeconstructingValues
      HaskellBook.Chapter11.ConstructingValues
      HaskellBook.Chapter11.ProductTypes
      HaskellBook.Chapter11.AlgebraicDataTypes
      HaskellBook.Chapter11.ExercisesLogicGoats_3
      HaskellBook.Chapter11.VigenereCipher
      HaskellBook.Chapter11.BinaryTree
      HaskellBook.Chapter11.ExerciseHuttonsRazor
      HaskellBook.Chapter11.Exercises
      HaskellBook.Chapter11.ExercisePhone
