name: School
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable school
  main-is: HSschool.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      HaskellBook.Chapter03.Exercises
      HaskellBook.Chapter03.Strings
      HaskellBook.Chapter06.Exercises
      HaskellBook.Chapter06.TypeKwonDo
      HaskellBook.Chapter06.Typeclasses
      HaskellBook.Chapter07.Exercises
      HaskellBook.Chapter07.Intermission
      HaskellBook.Chapter07.FuncPatterns
      HaskellBook.Chapter04.Exercises
      HaskellBook.Chapter04.BasicTypes
      HaskellBook.Chapter05.Exercises
      HaskellBook.Chapter05.TypeKwonDo
      HaskellBook.Chapter05.Types
      HaskellBook.Chapter08.Exercises
      HaskellBook.Chapter08.NumbersToWords
      HaskellBook.Chapter08.McCarthy91
      HaskellBook.Chapter08.Recursion
      HaskellBook.Chapter08.DividedBy
      HaskellBook.Chapter02.Exercises
      HaskellBook.Chapter02.Hello
