name:           parse-ch24
version:        0.1.0.0
license-file:   LICENSE
author:         Chicken Little
maintainer:     sky@isfalling.org
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
                     , checkers
                     , trifecta
                     , transformers
                     , bytestring
                     , raw-strings-qq
                     , text
  hs-source-dirs:      .
  default-language:    Haskell2010
